# light_autobaka

./: .env.example  .gitignore  LICENSE.md  README.md  config.toml.example  main.py  pyproject.toml
.github/workflows/: deploy.yml  test.yml
config/: __init__.py  load_config.py  set_config.py
config/models/: __init__.py  app_config.py  path_config.py  server_config.py
core/: __init__.py  bootstrap.py  calc.py  exceptions.py  fetch.py
logs/: __init__.py  log.py
tests/: test_logging.py
ui/: __init__.py  generate_html.py  template_index.html
utils/: __init__.py  config_exists.py  constants.py  display_results.py  get_login_details.py  output.py
utils/models/: __init__.py  env_vars.py  export.py  mark.py  progress_config.py
